// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bPSUjJ sc-jgrIVw iUPIph sc-gSQGeZ kMVRwO"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bPSUjJ sc-jgrIVw eVAeOq sc-gSQGeZ kMVRwO"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bPSUjJ sc-jgrIVw dSEjPw sc-gSQGeZ kMVRwO"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bPSUjJ sc-jgrIVw iUPIph sc-gSQGeZ kMVRwO"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
